[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -176.0
margin_right = 137.0
margin_bottom = -36.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 97.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit")
text = "Resume"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
text = "Load"

[node name="Option" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 97.0
margin_bottom = 68.0
text = "Option"

[node name="Achievemnt" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 97.0
margin_bottom = 92.0
text = "Achievement"

[node name="Credit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 97.0
margin_bottom = 116.0
text = "Credit"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 97.0
margin_bottom = 140.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/Achievemnt" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/Credit" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
